test/regress/coverage-expr-errors.test
; Test expr.cc/op.cc: expression error paths
; Exercises: unknown identifier error
;   real_calc error handling
;   op_context generation

2024/01/15 Test
    Expenses:Food    $50.00
    Assets:Checking

test reg --display "undefined_var" -> 1
__ERROR__
While evaluating value expression:
  undefined_var
  ^^^^^^^^^^^^^
While handling posting from "$FILE", line 7:
>     Expenses:Food    $50.00
Error: Unknown identifier 'undefined_var'
end test

test eval "1 +" -> 1
__ERROR__
While parsing value expression:
  1 +

Error: + operator not followed by argument
end test

test eval "(1 + 2" -> 1
__ERROR__
While parsing value expression:
  (1 + 2

Error: Invalid token '<end of input>' (wanted ')')
end test
